syntax = "proto3";

package swap;

// 询价服务
service RouterService {
    rpc Quote (QuoteRequest) returns (QuoteResponse);
}

// 询价请求消息
message QuoteRequest {
    // 输入币种地址，base58编码
    string input_mint = 1;

    // 输出币种地址，base58编码
    string output_mint = 2;

    // 币种数量
    string amount = 3;

    // amount 是指定的 input_mint 还是 output_mint
    bool is_base_input = 4;
}


// 询价响应消息
message QuoteResponse {
    enum SwapType {
        SWAP_TYPE_BASE_IN_UNSPECIFIED = 0; // 对应 "BaseIn"
        SWAP_TYPE_BASE_OUT_UNSPECIFIED = 1; // 对应 "BaseOut"
    }

    SwapType swap_type = 1; // 使用 enum 类型
    string input_mint = 2;
    string input_amount = 3;
    string output_mint = 4;
    string output_amount = 5;
    string other_amount_threshold = 6;
    // int32 slippage_bps = 7; // 使用 int32 对应 TypeScript 的 number
    double price_impact_pct = 8; // 使用 double 对应 TypeScript 的 number

    repeated RoutePlan route_plan = 9; // 数组类型使用 repeated

    message RoutePlan {
        string pool_id = 1;
        string input_mint = 2;
        string output_mint = 3;
        string fee_mint = 4;
        int32 fee_rate = 5; // 使用 int32 对应 TypeScript 的 number
        string fee_amount = 6;

        // 表示询价计算过中涉及的账户
        repeated string remaining_accounts = 7; // 可选字段使用 repeated
        // ？
        string last_pool_price_x64 = 8; // 可选字段
    }
}
